@@ -2175,10 +2175,6 @@ Init_Complex(void)
     rb_undef_method(rb_cComplex, "truncate");
     rb_undef_method(rb_cComplex, "i");
 
-#if 0 /* NUBY */
-    rb_undef_method(rb_cComplex, "//");
-#endif
-
     rb_define_method(rb_cComplex, "real", nucomp_real, 0);
     rb_define_method(rb_cComplex, "imaginary", nucomp_imag, 0);
     rb_define_method(rb_cComplex, "imag", nucomp_imag, 0);
@@ -2189,6 +2185,7 @@ Init_Complex(void)
     rb_define_method(rb_cComplex, "*", nucomp_mul, 1);
     rb_define_method(rb_cComplex, "/", nucomp_div, 1);
     rb_define_method(rb_cComplex, "quo", nucomp_quo, 1);
+    rb_define_method(rb_cComplex, "//", nucomp_quo, 1);
     rb_define_method(rb_cComplex, "fdiv", nucomp_fdiv, 1);
     rb_define_method(rb_cComplex, "**", nucomp_expt, 1);
 
