@@ -496,6 +496,8 @@ class TestRipper::ScannerEvents < Test::Unit::TestCase
                  scan('op', '1 % 1')
     assert_equal ['**'],
                  scan('op', '1 ** 1')
+    assert_equal ['//'],
+                 scan('op', '1 // 1')
     assert_equal ['~'],
                  scan('op', '~1')
     assert_equal ['-'],
